# hydro

./: .gitignore  CONTRIBUTING.md  Cargo.toml  cargo-sim  clippy.toml  precheck.bash  rust-toolchain.toml
cdk/: .gitignore  (+4 more)
copy_span/: Cargo.toml
copy_span/src/: lib.rs
dfir_rs/: Cargo.toml
dfir_rs/examples/chat/: client.rs  randomized_gossiping_server.rs  server.rs
dfir_rs/examples/deadlock_detector/: peer.rs
dfir_rs/examples/kvs/: helpers.rs  server.rs
dfir_rs/examples/kvs_bench/: main.rs  server.rs
dfir_rs/examples/kvs_mut/: client.rs  helpers.rs  server.rs
dfir_rs/examples/kvs_replicated/: client.rs  helpers.rs  server.rs
dfir_rs/examples/lamport_clock/: client.rs
dfir_rs/examples/rga/: main.rs  protocol.rs
dfir_rs/examples/shopping/: test_data.rs
dfir_rs/examples/two_pc_hf/: coordinator.rs  subordinate.rs
dfir_rs/examples/vector_clock/: client.rs
dfir_rs/src/: lib.rs
dfir_rs/src/compiled/pull/: symmetric_hash_join.rs  zip_longest.rs
dfir_rs/src/scheduled/: graph.rs  metrics.rs
dfir_rs/src/util/: mod.rs  simulation.rs  slot_vec.rs
dfir_rs/tests/: metrics.rs  surface_async.rs  surface_codegen.rs  surface_counter.rs  surface_cross_join_multiset.rs  surface_examples.rs  surface_multiset_delta.rs  surface_scan.rs  surface_sort.rs
dfir_rs/tests/compile-fail/: surface_anti_join_badtypes.stderr  surface_demuxenum_wrongfields_1.stderr  surface_demuxenum_wrongfields_2.stderr  surface_fold_keyed_generics_bad.stderr  surface_lattice_fold_noarg.stderr  surface_lattice_fold_wronggeneric.stderr  surface_missing_args.stderr  surface_port_join.stderr  surface_port_join_forwardref.stderr  surface_source_interval_badarg.stderr
dfir_rs/tests/compile-fail-stable/: surface_demuxenum_wrongenum.stderr  surface_demuxenum_wrongfields_1.stderr  surface_demuxenum_wrongfields_2.stderr  surface_demuxenum_wrongtype.stderr  surface_lattice_fold_noarg.stderr  surface_map_badtypes.stderr  surface_missing_args.stderr  surface_port_join.stderr  surface_port_join_forwardref.stderr
example_test/: Cargo.toml
example_test/src/: lib.rs
hydro_deploy/core/: Cargo.toml
hydro_deploy/core/src/: aws.rs  azure.rs  deployment.rs  gcp.rs  lib.rs  progress.rs  ssh.rs  terraform.rs  util.rs
hydro_deploy/core/src/localhost/: launched_binary.rs  mod.rs  samply.rs
hydro_deploy/core/src/rust_crate/: build.rs  flamegraph.rs  mod.rs  ports.rs  service.rs  tracing_options.rs
hydro_lang/: Cargo.toml  test-features.bash
hydro_lang/src/: forward_handle.rs  lib.rs  manual_expr.rs  nondet.rs  runtime_context.rs  test_util.rs
hydro_lang/src/compile/: builder.rs  built.rs  compiled.rs  deploy.rs  deploy_provider.rs  embedded.rs  embedded_runtime.rs  mod.rs
hydro_lang/src/compile/ir/: backtrace.rs  mod.rs
hydro_lang/src/compile/trybuild/: generate.rs  rewriters.rs
hydro_lang/src/deploy/: deploy_graph.rs  deploy_graph_containerized.rs  deploy_graph_containerized_ecs.rs  deploy_runtime.rs  deploy_runtime_containerized.rs  deploy_runtime_containerized_ecs.rs  mod.rs
hydro_lang/src/live_collections/: boundedness.rs  keyed_singleton.rs  mod.rs  optional.rs  singleton.rs
hydro_lang/src/location/: cluster.rs  dynamic.rs  external_process.rs  member_id.rs  mod.rs  process.rs  tick.rs
hydro_lang/src/networking/: mod.rs
hydro_lang/src/properties/: mod.rs
hydro_lang/src/runtime_support/: launch.rs
hydro_lang/src/sim/: builder.rs  compiled.rs  flow.rs  graph.rs  mod.rs  runtime.rs
hydro_lang/src/telemetry/: emf.rs  mod.rs
hydro_lang/src/viz/: api.rs  config.rs  debug.rs  graphviz.rs  json.rs  json_test.rs  mermaid.rs  render.rs
hydro_lang/tests/: compile_fail.rs
hydro_lang/tests/compile-fail/: non_bounded.rs  non_bounded.stderr  non_commutative.rs  non_commutative.stderr  non_commutative_operator.rs  non_commutative_operator.stderr  send_lifetime.rs  send_lifetime.stderr  sliced_missing_arg.rs  sliced_missing_arg.stderr
hydro_lang/tests/compile-fail-stable/: non_bounded.rs  non_bounded.stderr  non_commutative.rs  non_commutative.stderr  non_commutative_operator.rs  non_commutative_operator.stderr  send_lifetime.rs  send_lifetime.stderr  sliced_missing_arg.rs  sliced_missing_arg.stderr
hydro_std/: Cargo.toml
hydro_std/src/: compartmentalize.rs  quorum.rs  request_response.rs
hydro_std/src/bench_client/: mod.rs
hydro_test/: Cargo.toml  build.rs
hydro_test/benches/: paxos_bench.rs
hydro_test/examples/: chat.rs  compartmentalized_paxos.rs  compute_pi.rs  distributed_echo.rs  echo.rs  first_ten_distributed.rs  http_counter.rs  http_hello.rs  map_reduce.rs  paxos.rs  perf_compute_pi.rs  simple_cluster.rs  two_pc.rs
hydro_test/src/: lib.rs
hydro_test/src/cluster/: compartmentalized_paxos.rs  compute_pi.rs  many_to_many.rs  map_reduce.rs  paxos.rs  paxos_bench.rs  paxos_with_client.rs  simple_cluster.rs  two_pc.rs  two_pc_bench.rs
hydro_test/src/distributed/: distributed_echo.rs  first_ten.rs  mod.rs
hydro_test/src/embedded/: echo_network.rs  m2m_broadcast.rs  m2o_send.rs  mod.rs  o2m_broadcast.rs
hydro_test/src/external_client/: echo.rs  http_counter.rs
hydro_test/src/flink/: mod.rs  queries.rs  word_counter.rs
hydro_test/src/local/: capitalize.rs  chat_app.rs  count_elems.rs  futures.rs  graph_reachability.rs  mod.rs
hydro_test/src/maelstrom/: broadcast.rs  echo.rs  mod.rs  unique_ids.rs
hydro_test/src/tutorials/: concurrent_clients.rs  keyed_counter.rs  keyed_counter_non_atomic.rs  partitioned_counter.rs  single_client_counter.rs  single_counter.rs  single_counter_buggy.rs
hydro_test_embedded/: Cargo.toml  build.rs
hydro_test_embedded/src/: lib.rs
lattices/: Cargo.toml
lattices/src/: algebra.rs  lib.rs  map_union_with_tombstones.rs  set_union_with_tombstones.rs  tombstone.rs
lattices/src/ght/: colt.rs  lattice.rs  mod.rs  test.rs
sinktools/: Cargo.toml
sinktools/src/: demux_map.rs  demux_map_lazy.rs  lazy_sink_source.rs  lib.rs
sinktools/tests/: build.rs
template/hydro/: Cargo.toml  README.md
template/hydro/.prompts/: challenge-keyed-counter.md
template/hydro/examples/: echo_gcp.rs  echo_local.rs
template/hydro/src/: lib.rs
(+123 files in other folders)
