[workspace]

# See "Adding new crates" and "Moving crates" addendum sections in `RELEASING.md`
members = [
    "benches",
    "copy_span",
    "dfir_lang",
    "dfir_macro",
    "dfir_rs",
    "example_test",
    "hydro_deploy/core",
    "hydro_deploy/hydro_deploy_integration",
    "hydro_lang",
    "hydro_std",
    "hydro_test",
    "hydro_test_embedded",
    "hydro_test_template",
    "include_mdtests",
    "lattices_macro",
    "lattices",
    "multiplatform_test",
    "sinktools",
    "variadics_macro",
    "variadics",
    "website_playground",
]
exclude = ["template"]

resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/hydro-project/hydro"

[profile.release]
strip = true      # Strip symbols from the binary
# Previously this was "z" to minimize docker binary size while sacrificing performance. But "z"
# doesn't make things that much smaller, `strip` is far more important for binary size. Use "3" for
# performance.
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profile]
inherits = "release"
debug = 2
lto = "off"
strip = "none"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.dev.package.website_playground]
debug-assertions = false

[profile.release.package.website_playground]
opt-level = "s"

[workspace.lints.rust]
impl_trait_overcaptures = "warn"
missing_unsafe_on_extern = "deny"
unsafe_attr_outside_unsafe = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
explicit_into_iter_loop = "warn"
let_and_return = "allow"
redundant_clone = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
try_err = "warn"
uninlined_format_args = "allow"
unused_async = "warn"

[workspace.dependencies]
stageleft = "0.13.1"
stageleft_tool = "0.13.1"
