[package]
name = "copy_span"
publish = true
version = "0.1.0"
documentation = "https://docs.rs/copy_span/"
description = "Macro emitting tokens with the span of another set of tokens."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
syn = { version = "2", features = [ "parsing", "extra-traits" ] }
quote = "1"
