[package]
name = "dfir_rs"
publish = true
version = "0.15.0"
documentation = "https://docs.rs/dfir_rs/"
description = "DFIR runtime for Rust, used by Hydro."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
default = [ "macros", "debugging", "meta" ]

meta = [ "dep:dfir_lang" ]
macros = [ "dfir_macro" ]
dfir_macro = [ "dep:dfir_macro" ]
debugging = [ "dfir_lang/debugging" ]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "kvs_bench"

[dependencies]
bincode = "1.3.1"
bytes = "1.1.0"
dfir_lang = { path = "../dfir_lang", version = "^0.15.0", optional = true }
dfir_macro = { optional = true, path = "../dfir_macro", version = "^0.15.0" }
futures = "0.3.0"
hydro_deploy_integration = { optional = true, path = "../hydro_deploy/hydro_deploy_integration", version = "^0.15.0" }
itertools = "0.13.0"
lattices = { path = "../lattices", version = "^0.6.2", features = [ "serde" ] }
pin-project-lite = "0.2"
ref-cast = "1.0.0"
rustc-hash = "1.1.0"
sealed = "0.6.0"
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.115"
sinktools = { path = "../sinktools", version = "^0.0.1" }
slotmap = "1.0.0"
smallvec = "1.6.1"
tokio = { version = "1.29.0", features = [ "rt", "sync", "macros", "io-util", "time" ] }
tokio-stream = { version = "0.1.3", default-features = false, features = [ "time", "io-util" ] }
tokio-util = { version = "0.7.5", features = [ "codec" ] }
tracing = "0.1.37"
variadics = { path = "../variadics", version = "^0.0.10" }
web-time = "1.0.0"

# added to workaround `cargo smart-release` https://github.com/Byron/cargo-smart-release/issues/36
multiplatform_test = { path = "../multiplatform_test", version = "^0.6.0", optional = true }
include_mdtests = { path = "../include_mdtests", version = "^0.0.0", optional = true }
example_test = { path = "../example_test", version = "^0.0.0", optional = true }

# coax cargo-smart-release into publishing this crate.
# https://github.com/hydro-project/hydro/blob/main/RELEASING.md#addendum-adding-new-crates
# https://github.com/GitoxideLabs/cargo-smart-release/issues/36
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.29.0", features = [ "io-std", "fs" ] }
tokio-util = { version = "0.7.5", features = [ "net" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# We depend on getrandom transitively through rand. To compile getrandom to
# WASM, we need to enable its "js" feature. However, rand does not expose a
# passthrough to enable "js" on getrandom. As a workaround, we enable the
# getrandom js feature here; when the feature resolver computes the set of
# features for getrandom (unification), it will include "js".
getrandom = { version = "0.2.6", features = [ "js" ] }

[dev-dependencies]
dfir_lang = { path = "../dfir_lang", version = "^0.15.0", features = [ "clap-derive" ] }

chrono = { version = "0.4.20", features = [ "serde", "clock" ], default-features = false }
clap = { version = "4.5.4", features = [ "derive" ] }
colored = "2.0"
example_test = { path = "../example_test", version = "^0.0.0" }
include_mdtests = { path = "../include_mdtests", version = "^0.0.0" }
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.0.1" }
multiplatform_test = { path = "../multiplatform_test", version = "^0.6.0" }
rand = { version = "0.8.0", features = [ "small_rng" ] }
rand_distr = "0.4.3"
regex = "1.10.4"
static_assertions = "1.0.0"
time = "0.3"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
trybuild = "1"
wasm-bindgen-test = "0.3.51"
zipf = "7"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Rayon (rust data-parallelism library) does not compile on WASM.
criterion = { version = "0.5.0", features = [ "async_tokio", "html_reports" ] }

[build-dependencies]
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.0.1" }
