[package]
name = "hydro_std"
publish = true
version = "0.15.0"
documentation = "https://docs.rs/hydro_plus/"
description = "Standard library of distributed systems building blocks for Hydro"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
stageleft_macro_entrypoint = ["hydro_lang/stageleft_macro_entrypoint"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.15.0" }
stageleft.workspace = true
hdrhistogram = "7.5.4"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
stageleft_tool.workspace = true

[dev-dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.15.0", features = [
    "deploy",
    "sim",
] }
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.15.0" }
ctor = "0.2"
