[package]
name = "sinktools"
version = "0.0.1"
description = "Extra sink adaptors and helpers."
documentation = "https://docs.rs/sinktools/"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "variadics"]
std = ["futures-util/std", "variadics?/std", "dep:tokio", "tokio/sync", "tokio/macros", "tokio/rt"]
variadics = ["dep:variadics"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
pin-project-lite = "0.2"
sealed = "0.6"
tokio = { version = "1.29.0", default-features = false, optional = true }
variadics = { optional = true, path = "../variadics", default-features = false, version = "^0.0.10" }

[dev-dependencies]
bytes = "1.1.0"
futures-task = { version = "0.3" }
sinktools = { path = ".", features = ["std"] }
tokio = { version = "1.29.0", default-features = false, features = ["macros", "rt"] }
tokio-stream = { version = "0.1.3", default-features = false }
tokio-util = { version = "0.7.5", default-features = false, features = ["net", "codec"] }
